[tool.poetry]
name = "runtools"
version = "0.1.0"
description = ""
authors = ["Matthew Hartley <mhartley@cantab.net>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pandas = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
rt_list = "runtools.console:list_working_dir"
